--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: "Philosopher", sans-serif;
-    background-color: #FFFFFF;;
+    background-color: #FFFFFF;
 }
 .page-link {
     color: #404040;
