--- a/css/sidebars.css
+++ b/css/sidebars.css
@@ -1,6 +1,7 @@
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  background-color: #FFFFFF; /* White background */
 }
 
 html {
