--- a/css/sidebars.css
+++ b/css/sidebars.css
@@ -72,10 +72,10 @@ btn-toggle-nav a:hover, .btn-toggle-nav a:focus {
 
 .b-example-divider {
   height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(0, 0, 0, 0);
   border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  border-width: 2px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .0), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
 
 .b-example-vr {
