--- a/components/component1.html
+++ b/components/component1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <title>Navbar</title>
+    <title>Ridwan B Design Phase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
@@ -82,6 +82,9 @@
           <div class = "row p-5">
             <div id="content">
               <h2>Navbar</h2>
+              <p>The Nav bar I have consists of just 3 tabs and the logo. I changed my Nav bar color to give a more simple and clear color for better accessibility.
+              The accessibility cosiderations I had thought of design this were; contrast and visual design by using simple colors, 
+                text size by using a proper readable size and a consistent structure for adaptability.</p>
               <header>
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                   <div class="container-fluid">
