--- a/components/component2.html
+++ b/components/component2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <title>Footer</title>
+    <title>Ridwan B Design Phase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
    
@@ -84,6 +84,9 @@
           <div class = "row p-5">
             <div id="content">
               <h2>Footer</h2>
+              <p>The footer color choice was just a design decision I made when I was originally 
+              making my figma design. I wanted the Nav and the footer to be the same color regardless 
+              of what color palette I chose. The footer is typically used for copyright, signatures, etc. </p>
               <footer>
                 <div class="footer-text">
                   <p>Ridwan Badejo ©</p>
