--- a/components/component3.html
+++ b/components/component3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <title>Template: Bootstrap v5.3</title>
+    <title>Ridwan B Design Phase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
    
@@ -84,6 +84,10 @@
           <div class = "row p-5">
             <div id="content">
               <h2>Cards</h2>
+              <p>The card is allows a user to access a project page or any other page the card is meant for. The card should be clickable and card
+                has to have the title and an image or video of the project. For accessibility considerations; alt text for images,
+                semantic html and a good color contrast.</p>
+            
               <div class="row">
                 <div class="col-lg-4">
                   <div class="card">
