--- a/components/component2.html
+++ b/components/component2.html
@@ -86,7 +86,9 @@
               <h2>Footer</h2>
               <p>The footer color choice was just a design decision I made when I was originally 
               making my figma design. I wanted the Nav and the footer to be the same color regardless 
-              of what color palette I chose. The footer is typically used for copyright, signatures, etc. </p>
+              of what color palette I chose. The footer should consists of copyright, signatures, etc. The footer is always at the bottom
+                of every page on the website. Good accessibility for a footer will be scalability, contrast and design 
+              </p>
               <footer>
                 <div class="footer-text">
                   <p>Ridwan Badejo ©</p>
